microconfig-core/src/test/resources/repo/components/exceptions/bad/cyclic/cyclicDetectBetweenConfigTypes/process.process
key2=${app::this@key}